end of day 7/29

--- a/src/assets/scss/components/_custom-components.scss
+++ b/src/assets/scss/components/_custom-components.scss
@@ -216,3 +216,16 @@
         }
     }
 }
+
+// Newsletter Modal
+
+#newsletter {
+    h1 {
+        text-align: center;
+        font-size: 1.25rem;
+    }
+
+    .post-widget-container {
+        border: none;
+    }
+}
