--- a/src/assets/scss/templates/_banner-full.scss
+++ b/src/assets/scss/templates/_banner-full.scss
@@ -36,6 +36,7 @@
 
             @include breakpoint(medium) {
                 height: 100vh;
+                object-position: center;
                 bottom: auto;
             }
         }
