--- a/src/assets/scss/components/_image-grid.scss
+++ b/src/assets/scss/components/_image-grid.scss
@@ -10,8 +10,6 @@
             border: none;
             position: relative;
             text-align: center;
-            // width: 100%;
-            // height: 100%;
             box-shadow: none;
             border: none;
             transition: all 0.2s ease-in-out;
@@ -21,14 +19,10 @@
                 transform: scale(1.2);
                 box-shadow: none;
 
-                img {
-                    @include blur(5);
-                }
-
                 figcaption {
-                    transform: translate(0, -50%);
+                    transform: translateY(50%);
                     opacity: 0.8;
-                    top: 50%;
+                    bottom: 50%;
                 }
             }
                 
@@ -42,9 +36,8 @@
             figcaption {
                 display: block;
                 position: absolute;
-                padding: 25px;
+                padding: 10px 0;
                 color: $secondary-color;
-                // width: 100%; 
                 opacity: 0;
                 transition: 0.2s all;
                 transform: translateY(100%);
