--- a/src/assets/scss/templates/_partners.scss
+++ b/src/assets/scss/templates/_partners.scss
@@ -18,6 +18,7 @@
 
             @include breakpoint(large) {
                 height: 100%;
+                background-position: -500px 50px;
             }
         }
     }
