--- a/src/assets/scss/templates/_post-grid.scss
+++ b/src/assets/scss/templates/_post-grid.scss
@@ -536,21 +536,16 @@ of the Resource center.
 
         .entry-inner-content {
             width: 100%;
+            align-self: initial !important;
         }
         
         .iframe-container {
             position: relative;
             width: 100%;
             height: 0;
-            padding-bottom: 56.25%;
     
             iframe {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                border: 0;
+                
             }
         }
     }
