--- a/src/assets/scss/components/_cards.scss
+++ b/src/assets/scss/components/_cards.scss
@@ -88,6 +88,7 @@
 
     img {
       max-width: 200px;
+      height: 100%;
       
       @include breakpoint(medium) {
         max-width: 300px;
@@ -107,6 +108,7 @@
     color: $CRG-gray;
     justify-content: center;
     font-size: 1.5rem;
+    
 
     &:after {
       position: absolute;
@@ -115,6 +117,8 @@
       display: block;
       opacity: 0;
       bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
       width: 0;
       height: 5px;
       background-color: #ffc52a;
@@ -141,8 +145,12 @@
     margin: 0 auto;
     margin-top: 30px;
     margin-bottom: 30px;
-    width: 80%;
+    width: 100%;
     border: none;
+
+    @include breakpoint(medium) {
+      width: 80%;
+    }
   }
 
   .partner-desc {
