--- a/src/assets/scss/templates/_banner-full.scss
+++ b/src/assets/scss/templates/_banner-full.scss
@@ -24,20 +24,23 @@
             }
         }
 
-        .banner-video, .video-ended-poster {
+        .banner-video, .video-ended-poster { 
             object-fit: cover;
-            object-position: top;
+            object-position: center top;
             position: absolute;
             height: 60%;
             bottom: 0;
-            width: 100vw;
+            width: auto;
+            min-width: 100%;
             max-width: initial;
             z-index: 0;
 
             @include breakpoint(medium) {
-                height: 100vh;
+                height: auto;
+                min-height: 100%;
                 object-position: center;
                 bottom: auto;
+                
             }
         }
 
@@ -117,9 +120,9 @@
                 .banner-title {
                     position: relative;
                     line-height: 1rem;
-                    font-size: 1.5rem;
+                    font-size: 1.4rem;
                     color: $primary-color;
-                    padding: 20px 20px 20px 20px;
+                    padding: 20px 0 20px 0;
 
                     &:after {
                         @include yellow-line-center();
@@ -131,10 +134,12 @@
                     }
 
                     @include breakpoint(medium) {
+                        padding: 20px 20px 20px 20px;
                         font-size: 1.75rem;
                     }
     
                     @include breakpoint(large) {
+                        padding: 20px 20px 20px 20px;
                         font-size: 2rem;
                     }
                 }
