--- a/src/assets/scss/templates/_partners.scss
+++ b/src/assets/scss/templates/_partners.scss
@@ -51,7 +51,11 @@
         }
 
         .entry-content{
-            padding-top: rem-calc(50);
+            padding-top: 0;
+
+            @include breakpoint(medium) {
+                padding-top: rem-calc(50);
+            }
 
             nav {
                 padding-top: rem-calc(30);
