--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -99,7 +99,7 @@
 @import "templates/partners";
 @import "templates/post";
 @import "templates/post-grid";
-@import "templates/chief-keith";
+@import "templates/newsletter";
 
 
 
