--- a/src/assets/scss/templates/_banner-small.scss
+++ b/src/assets/scss/templates/_banner-small.scss
@@ -67,6 +67,7 @@
     padding-top: 40px;
 }
 
-.category-chief_keith_corner .title {
+.category-chief_keith_corner .title,
+.category-newsletter .title  {
     flex-direction: column;
 }
