--- a/src/assets/scss/templates/_newsletter.scss
+++ b/src/assets/scss/templates/_newsletter.scss
@@ -1,4 +1,5 @@
-.category-chief_keith_corner {
+.category-chief_keith_corner,
+.category-newsletter {
     .taxonomy-description {
         color: $white;
         font-size: 1rem;
@@ -31,6 +32,10 @@
             height: 100%;
             display: flex;
             z-index: 400;
+        }
+
+        .newsletter-container .post.wp-sticky {
+            display: block;
         }
 
         .grid-x {
