--- a/src/assets/scss/global/_globals.scss
+++ b/src/assets/scss/global/_globals.scss
@@ -165,6 +165,15 @@ a {
         cursor: default;
     }
 }
+
+// ++++++++++++++++++++++++++++++++++++++++++++++++
+// Wordpress Styles
+// ++++++++++++++++++++++++++++++++++++++++++++++++
+
+.wp-block-image {
+    padding: 40px;
+}
+
 // ++++++++++++++++++++++++++++++++++++++++++++++++
 // Search
 // ++++++++++++++++++++++++++++++++++++++++++++++++
