started product page

--- a/src/assets/scss/global/_globals.scss
+++ b/src/assets/scss/global/_globals.scss
@@ -166,6 +166,12 @@ a {
     }
 }
 
+.alexMap {
+    width: 100%;
+    height: 500px;
+    // margin-top: 50px;
+}
+
 // ++++++++++++++++++++++++++++++++++++++++++++++++
 // Wordpress Styles
 // ++++++++++++++++++++++++++++++++++++++++++++++++
