--- a/src/assets/scss/templates/_team.scss
+++ b/src/assets/scss/templates/_team.scss
@@ -6,7 +6,8 @@
     .senior-grid,
     .managers-grid,
     .full-timers-grid,
-    .interns-grid {
+    .interns-grid,
+    .advisors-grid {
         @include xy-grid;
         @include flex-align($x: center);
 
@@ -37,18 +38,6 @@
 
             @include breakpoint(middle) {
                 @include xy-cell(2.4);
-            }
-    
-            &.senior {
-               
-            }
-    
-            &.full-time {
-    
-            }
-    
-            &.intern {
-    
             }
 
             a {
@@ -122,7 +111,9 @@
         }
     }
 
-    .team-member-desc {
+    .team-member-desc,
+    .advisors-desc {
+
         @include flex-align-self(middle);
         @include xy-cell(12);
         @include xy-gutters(100, $gutter-position: left right);
@@ -180,6 +171,7 @@
                     padding: 5px;
                     font-size: 1.5rem;
                     text-align: left;
+                    position: relative;
 
                     i {
                         @include breakpoint(middle) {
@@ -193,8 +185,9 @@
                         opacity: 0;
                         // padding-bottom: 10px;
                         left: 0;
+                        top: 30px;
                         font-size: 0.8rem;
-                        width: 100%;
+                        width: 200px;
 
                         @include breakpoint(middle) {
                             color: $white;
@@ -227,85 +220,94 @@
         }
     }
 
-    .team-member-post-navigation {
-        width: 100%;
-        @include xy-cell(12);
-        @include flex-align-self(bottom);
-        z-index: 1;
+    // Advisor desc styling
+    .advisor-desc {
+    }
 
-        .navigation.post-navigation{
-            .nav-links {
-                @include xy-grid; 
+    // Team Member Description
+    .team-member-desc {
+    
+    }    
+}
+
+.team-member-post-navigation {
+    width: 100%;
+    @include xy-cell(12);
+    @include flex-align-self(bottom);
+    z-index: 1;
+
+    .navigation.post-navigation{
+        .nav-links {
+            @include xy-grid; 
+            @include flex-align($x: right);
+
+            & > .nav-previous,
+            & > .nav-next {
+                @include xy-cell(6);
+                padding: 20px;
+                
+                a {
+                    width: 100%;
+                    color: $black;
+
+                    @include breakpoint(middle) {
+                        color: $white;
+                    }
+                }
+
+                span {
+                    &.nav-subtitle {
+                        display: none;
+                    }
+
+                    &.nav-title {
+                        font-weight: bold;
+                        transition: all 0.3s ease-out;
+                    }
+                }
+            }
+
+            &:hover,
+            &:focus {
+                .nav-next .nav-next,
+                .nav-previous .nav-previous {
+                    .nav-title {
+                        transform: scale(1.1);
+                    }
+                    
+                }
+            }
+            
+            .nav-previous .nav-previous {
+                @include flex;
+                // @include flex-direction()
+
+                &:before {
+                    content: "";
+                    @include css-triangle(10px, $secondary-color, left);
+                    @include flex-align-self(middle);
+                    margin-right: 20px;
+                }
+
+                span {
+                    padding-right: 10px;
+                }
+            }
+
+            .nav-next .nav-next {
+                text-align: right;
+                @include flex;
                 @include flex-align($x: right);
 
-                & > .nav-previous,
-                & > .nav-next {
-                    @include xy-cell(6);
-                    padding: 20px;
-                    
-                    a {
-                        width: 100%;
-                        color: $black;
-
-                        @include breakpoint(middle) {
-                            color: $white;
-                        }
-                    }
-
-                    span {
-                        &.nav-subtitle {
-                            display: none;
-                        }
-
-                        &.nav-title {
-                            font-weight: bold;
-                            transition: all 0.3s ease-out;
-                        }
-                    }
+                &:after {
+                    content: "";
+                    @include css-triangle(10px, $secondary-color, right);
+                    @include flex-align-self(middle);
+                    margin-left: 20px;
                 }
 
-                &:hover,
-                &:focus {
-                    .nav-next .nav-next,
-                    .nav-previous .nav-previous {
-                        .nav-title {
-                            transform: scale(1.1);
-                        }
-                        
-                    }
-                }
-                
-                .nav-previous .nav-previous {
-                    @include flex;
-                    // @include flex-direction()
-
-                    &:before {
-                        content: "";
-                        @include css-triangle(10px, $secondary-color, left);
-                        @include flex-align-self(middle);
-                        margin-right: 20px;
-                    }
-
-                    span {
-                        padding-right: 10px;
-                    }
-                }
-
-                .nav-next .nav-next {
-                    text-align: right;
-                    @include flex;
-                    @include flex-align($x: right);
-
-                    &:after {
-                        content: "";
-                        @include css-triangle(10px, $secondary-color, right);
-                        @include flex-align-self(middle);
-                        margin-left: 20px;
-                    }
-
-                    span {
-                        padding-left: 10px;
-                    }
+                span {
+                    padding-left: 10px;
                 }
             }
         }
