--- a/src/assets/scss/templates/_team.scss
+++ b/src/assets/scss/templates/_team.scss
@@ -66,6 +66,47 @@
     }
 }
 
+.advisor.full-image {
+    @include xy-grid;
+    min-height: initial;
+
+    @include breakpoint(medium) {
+        margin-top: 100px;
+        min-height: calc(100vh - 100px);
+    }
+
+    .team-member-bg {
+        @include xy-cell(12);
+        min-width: initial;
+        height: initial;
+        position: initial;
+
+        @include breakpoint(medium) {
+            max-width: 75vw;
+            margin: auto;
+        }
+
+        @include breakpoint(large) {
+            @include xy-cell(2);
+            margin: initial;
+        }
+
+        img {
+            min-width: 100%;
+            border-radius: initial;
+
+            
+
+            @include breakpoint(large) {
+                border-radius: 100%;
+                height: initial;
+                width: initial;
+                min-width: initial;
+            }
+        } 
+    }
+}
+
 .full-image {
     position: relative;
     min-height: 100vh;
@@ -110,125 +151,181 @@
             height: 100%;
         }
     }
+}
 
-    .team-member-desc,
-    .advisors-desc {
+.team-member-desc,
+.advisor-desc {
+    @include flex-align-self(middle);
+    @include xy-gutters(100, $gutter-position: left right);
+    z-index: 1;
+    height: 100%;
 
-        @include flex-align-self(middle);
-        @include xy-cell(12);
-        @include xy-gutters(100, $gutter-position: left right);
-        z-index: 1;
-        height: 100%;
+    @include breakpoint(middle) {
+        @include xy-gutters(50, $gutter-position: left right)
+    }
+
+    .team-member-h1 {
+        margin-top: 10px;
+        font-size: 3.5rem;
 
         @include breakpoint(middle) {
-            @include xy-cell(6);
-            @include xy-gutters(50, $gutter-position: left right)
+            margin-bottom: 5px;
+        }
+    }
+
+    .team-member-contact {
+        @include flex;
+        @include flex-direction(column);
+        margin-bottom: 0;
+
+        @include breakpoint(middle) {
+            margin-bottom: 40px;
         }
 
-        .team-member-h1 {
-            margin-top: 10px;
-            font-size: 3.5rem;
+        strong {
+            font-size: 1.2rem;
 
             @include breakpoint(middle) {
-                margin-bottom: 5px;
                 color: $secondary-color;
             }
         }
 
-        .team-member-contact {
-            @include flex;
-            @include flex-direction(column);
-            margin-bottom: 0;
-
+        a {
             @include breakpoint(middle) {
-                margin-bottom: 40px;
-            }
+                color: $white;
 
-            strong {
-                font-size: 1.2rem;
-
-                @include breakpoint(middle) {
+                &:hover {
                     color: $secondary-color;
                 }
             }
+        }
 
-            a {
-                @include breakpoint(middle) {
-                    color: $white;
+        .team-member-social {
+            @include social-media(left);
 
-                    &:hover {
-                        color: $secondary-color;
+            li {
+                padding: 0 20px 0 0 !important;
+                list-style: none;
+                padding: 5px;
+                font-size: 1.5rem;
+                text-align: left;
+                position: relative;
+
+                i {
+                    @include breakpoint(middle) {
+                        color: $white;
                     }
                 }
-            }
 
-            .team-member-social {
-                @include social-media(left);
+                .link-text {
+                    position: absolute;
+                    // transform: translateY(%);
+                    opacity: 0;
+                    // padding-bottom: 10px;
+                    left: 0;
+                    top: 30px;
+                    font-size: 0.8rem;
+                    width: 200px;
 
-                li {
-                    padding: 0 20px 0 0 !important;
-                    list-style: none;
-                    padding: 5px;
-                    font-size: 1.5rem;
-                    text-align: left;
-                    position: relative;
-
-                    i {
-                        @include breakpoint(middle) {
-                            color: $white;
-                        }
+                    @include breakpoint(middle) {
+                        color: $white;
                     }
+                }
+
+                &:hover {
 
                     .link-text {
-                        position: absolute;
-                        // transform: translateY(%);
-                        opacity: 0;
-                        // padding-bottom: 10px;
-                        left: 0;
-                        top: 30px;
-                        font-size: 0.8rem;
-                        width: 200px;
-
-                        @include breakpoint(middle) {
-                            color: $white;
-                        }
-                    }
-
-                    &:hover {
-
-                        .link-text {
-                            // transform: translateY(0);
-                            opacity: 1;
-                        }
+                        // transform: translateY(0);
+                        opacity: 1;
                     }
                 }
             }
         }
+    }
 
-        .team-member-p {
-            padding: 20px 10px;
-            background: rgba(255, 255, 255, 0.2);
-            max-width: 100%;
-            font-size: 1.2rem;
+    .team-member-p {
+        padding: 20px 10px;
+        background: rgba(255, 255, 255, 0.2);
+        max-width: 100%;
+        font-size: 1.2rem;
 
-            @include breakpoint(middle) {
-                padding: 40px 40px 40px 40px;
-                font-size: 1.4rem;
-                max-width: 80%;
-                color: $white;
+        @include breakpoint(middle) {
+            padding: 40px 40px 40px 40px;
+            font-size: 1.4rem;
+            max-width: 80%;
+            color: $white;
+        }
+    }
+}
+
+// Advisor desc styling
+.advisor-desc {
+    @include xy-cell(12);
+    max-width: initial;
+    // margin: auto;
+
+    @include breakpoint(medium) {
+        max-width: 75vw;
+        margin: auto;
+    }
+
+    @include breakpoint(large) {
+        @include xy-cell(8);
+        // max-width: initial;
+        // margin: initial;
+    }
+
+    .team-member-h1 {
+        color: initial;
+    }
+
+    .team-member-contact {
+        strong {
+            color: initial;
+        }
+
+        a {
+            color: initial;
+
+            &:hover {
+                color: $secondary-color;
+            }
+        }
+
+        .team-member-social {
+            @include social-media(left);
+
+            li {
+                i {
+                    color: initial;
+                }
+
+                .link-text {
+                    color: initial;
+                }
             }
         }
     }
 
-    // Advisor desc styling
-    .advisor-desc {
+    .team-member-p {
+        color: initial;
+    }
+}
+
+// Team Member Description
+.team-member-desc {
+    @include xy-cell(12);
+
+    @include breakpoint(middle) {
+        @include xy-cell(6);
     }
 
-    // Team Member Description
-    .team-member-desc {
-    
-    }    
-}
+    .team-member-h1 {
+        @include breakpoint(middle) {
+            color: $secondary-color;
+        }
+    }
+}    
 
 .team-member-post-navigation {
     width: 100%;
