--- a/src/assets/scss/components/_cards.scss
+++ b/src/assets/scss/components/_cards.scss
@@ -29,7 +29,7 @@
 
     .card {
         @include xy-cell(12);
-        height: 100%;
+        // height: 100%;
         border: 0;
 
         @include breakpoint(medium) {
@@ -37,7 +37,7 @@
         }
 
         @include breakpoint(large) {
-            @include xy-cell(3);
+            @include xy-cell(2);
         }
 
         .card-section {
@@ -58,8 +58,7 @@
             &.card-paragraph {
                 div {
                   margin-top: auto;
-                  width: 50%;
-                  
+                  width: 100%;
                 }
             }
         }
