advisors, print product, giving back pages

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -84,6 +84,7 @@
 @import "components/custom-components";
 @import "components/forms";
 @import "components/image-grid";
+@import "components/simple-post-list";
 
 // Templates
 @import "templates/front";
@@ -102,5 +103,6 @@
 @import "templates/post-grid";
 @import "templates/newsletter";
 @import "templates/pricing-sizing";
+@import "templates/terms-conditions";
 
 
