--- a/src/assets/scss/templates/_banner-small.scss
+++ b/src/assets/scss/templates/_banner-small.scss
@@ -36,6 +36,10 @@
         @include breakpoint(medium) {
             display: block;
         }
+
+        &.philanthropy {
+            // top: -40%;
+        }
     }
 
     .title {
