--- a/src/assets/scss/components/_simple-post-list.scss
+++ b/src/assets/scss/components/_simple-post-list.scss
@@ -39,5 +39,13 @@
             }
 
         }
+
+        &.advisor {
+            .img-container {
+                img {
+                    max-height: 250px;
+                }
+            }
+        }
     }
 }
